# Channel_sounding_Abdir

./: .gitignore  My_CS_current.txt  repopackpy-output.txt
boards/: nrf54l15tag_nrf54l15_cpuapp.overlay  nrf54l15zhiyuan_nrf54l15_cpuapp.overlay
lib/: CMakeLists.txt  global.h
lib/black_box/: coreaiot_distance.h
lib/ble/: ble.c
lib/calc/: calc.c  calc.h
lib/calc_black_box/: calc_black_box.c  calc_black_box.h
lib/cs/: cs.c  cs.h
lib/sync/: sync.c  sync.h
projects/initator_build/: CMakeLists.txt  prj.conf
projects/reflector_build/: Kconfig  prj.conf
src/: initator.c  reflector.c
